<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".fragment_login">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/imgBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_red_24dp" />


            <TextView
                android:id="@+id/txtSignupLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/signup"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:layout_marginRight="25dp"
                android:clickable="true"/>


        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <TextView
                android:id="@+id/txtcreataccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginto"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="@android:color/black"

                />


            <EditText
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email address"
                android:layout_marginTop="25dp"

                android:textSize="15dp"

                />
            <EditText
                android:id="@+id/pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:inputType="textPassword"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:layout_gravity="center"
                android:clickable="true"
                android:layout_marginTop="10dp"
                />
<View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".5"
    />
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/roundbutton"
                android:layout_gravity="bottom"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="20dp"
                android:id="@+id/login"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />



        </LinearLayout>

    </LinearLayout>






</FrameLayout>
