<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_gettingStarted"
    android:background="@color/backgroundColor">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight=".5"
            >

        <ImageView
            android:id="@+id/imgviewlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/logoonly" />
        <TextView
            android:id="@+id/txtQuote"
            android:layout_below="@+id/imgviewlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="this is my quote"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".3"

            >
            <TextView
                android:id="@+id/txtGettingStarted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote"
                android:textColor="@android:color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />
            <Button
                android:id="@+id/btngetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:text="Get Started"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"

                />



        <LinearLayout
            android:id="@+id/loginlinklayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haveaccountalready"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/txtLoginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:clickable="true"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>