<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgR"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@null"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_person_black_24dp"
                tools:ignore="VectorDrawableCompat" />
            <TextView
                android:id="@+id/kidage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="17 years old"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:id="@+id/kidusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/username"/>
        <TextView
            android:id="@+id/twitterHandle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:text="@string/handle"
            />
       <!--<TextView-->
           <!--android:layout_width="wrap_content"-->
           <!--android:layout_height="wrap_content"-->
           <!--android:text="4 new notifications"-->
           <!--android:textSize="20dp"-->
           <!--android:layout_marginLeft="10dp"/>-->
        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           >


           <Button
               android:id="@+id/btnAlerts"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:layout_alignParentTop="true"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:text="@string/alerts"
               android:backgroundTint="@color/lightgrey"
               android:textColor="@color/colorPrimary"
               android:textSize="15dp"
               android:textStyle="bold"

               />





       </LinearLayout>


         </LinearLayout>


    </LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#dadada"
    />
  <!--  <TextView
        android:id="@+id/listItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_light"/>
-->
</LinearLayout>