<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".fragment_finishSignup">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:navigationIcon="@drawable/ic_arrow_back_red_24dp">

            <ImageView
                android:id="@+id/imgBackSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_arrow_back_red_24dp" />


        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <TextView
                android:id="@+id/txtcreataccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createaccount"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="@android:color/black"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                />
            <EditText
                android:id="@+id/edusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:textSize="15dp"

                />

            <EditText
                android:id="@+id/edemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email address"
                android:layout_marginTop="20dp"

                android:textSize="15dp"

                />
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                />
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/txtPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/policy"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup"
                android:text="@string/signup"
                android:background="@drawable/roundbutton"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="20dp"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                />


        </LinearLayout>

    </LinearLayout>


</FrameLayout>
